--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.Gson.classpath}:\
+    ${libs.Json_simple.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
